--- a/src/package.json
+++ b/src/package.json
@@ -1,10 +1,10 @@
 {
-  "author": "J. J. Merelo <jjmerelo@gmail.com> (http://github.com/JJ/desarrollo-basado-pruebas)",
+  "author": "J. J. Merelo <jjmerelo@gmail.com> (http://github.com/saguito/desarrollo-basado-pruebas)",
   "name": "porrio",
   "description": "Apuestas en una porra",
   "version": "0.0.1",
   "repository": {
-    "url": "git://github.com/JJ/desarrollo-basado-pruebas.git"
+    "url": "git://github.com/saguito/desarrollo-basado-pruebas.git"
   },
   "main": "./prueba.js",
   "scripts": {
@@ -15,9 +15,11 @@
   },
   "devDependencies": {
     "assert": "^1.1.2",
-    "docco": "~0.6",
-    "mocha": "^6.2.0",
-    "chai": "^0"
+    "chai": "^0",
+    "docco": "^0.6.3",
+    "grunt": "^1.4.0",
+    "grunt-docco": "^0.5.0",
+    "mocha": "^6.2.0"
   },
   "optionalDependencies": {},
   "engines": {
